--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -99,3 +99,8 @@ table {
         padding: 0.125rem 0.5rem;
     }
 }
+
+/* Custom cover page background */
+.cover.show {
+    background: linear-gradient(to left bottom, hsl(5, 100%, 85%) 0%, hsl(240, 100%, 85%) 100%) !important;
+}
